# s3d

./: .gitattributes  .gitignore  CMakeLists.txt  CREDITS  ChangeLog  ConfigureChecks.cmake  INSTALL  Makefile.am  Makefile.in  README  ROADMAP  TODO  autogen.sh  config.h.cmake  config.h.in  configure  configure.ac  configure.in  s3drc.cmake  s3drc.in
Documentation/: CMakeLists.txt  Maintain.txt  Makefile.am  OPEN_PROBLEMS.txt  README  RelNotes-0.0.1.txt  RelNotes-0.0.2.txt  RelNotes-0.1.1.txt  RelNotes-0.1.txt  RelNotes-0.2.1.1.txt  RelNotes-0.2.1.2.txt  RelNotes-0.2.1.txt  RelNotes-0.2.2.1.txt  RelNotes-0.2.2.txt  RelNotes-0.2.txt  SubmittingPatches  TODO  bookinfo.docbook  extractdefinitions.py  for_icon_designer.txt  maintain.txt  movement.txt  s3d.docbook  s3dlib.txt  s3drc.txt  xml.doxygen
Documentation/libs3d/: Makefile.am  README  TODO  bookinfo.docbook  functions.docbook  libs3d.docbook  s3dapi.docbook  structs.docbook  typedefs.docbook
Documentation/libs3dw/: functions.docbook  libs3dw.docbook  structs.docbook  typedefs.docbook
Documentation/manpages/: CMakeLists.txt  build-manpages.sh  dot_mcp.1  dot_mcpmanpage.sgml  kism3d.1  kism3dmanpage.sgml  meshs3d.1  meshs3dmanpage.sgml  s3d.1  s3d_x11gate.1  s3d_x11gate.sgml  s3d_x11gatemanpage.sgml  s3dfm.1  s3dfmmanpage.sgml  s3dmanpage.sgml  s3dosm.1  s3dosmmanpage.sgml  s3dvt.1  s3dvtmanpage.sgml
Documentation/s3dapi/: TODO  s3dapi.docbook
Documentation/server/: CMakeLists.txt  server.docbook
apps/dot_mcp/: CMakeLists.txt  Makefile.am  TODO  dot_mcp.c  dot_mcp.h  main.c  menu.c  rotate.3ds
apps/kism3d/: CMakeLists.txt  Makefile.am  client.c  gui.c  kism3d.c  kism3d.h  list.h  network.c
apps/meshs3d/: CMakeLists.txt  Makefile.am  allocate.c  allocate.h  batman-adv.data  dump.data  hash.c  hash.h  ipv6.data  main.c  meshs3d.h  mixed.data  net.c  olsrd1.data  process.c  subgraph.data  testvis.README  testvis.c
apps/olsrs3d/: CMakeLists.txt  Makefile.am  Makefile.in  TODO  accesspoint_inet.3ds  data_structure.xmi  main.c  mod_search.c  mod_search.h  net.c  olsrs3d.h  output.sample  process.c  search.c  search.h  structs.h  terminal.c  terminal.h  vector.c
apps/s3d_x11gate/: CMakeLists.txt  Makefile.am  Makefile.in  TODO  s3d_x11gate.c
apps/s3dfm/: CMakeLists.txt  Makefile.am  TODO  animation.c  box.c  dialog.c  event.c  fly.c  focus.c  fs.c  icon.c  main.c  node.c  parse.c  s3dfm.h  string.c
apps/s3dosm/: CMakeLists.txt  Makefile  Makefile.am  TODO  avl.c  bbbikepol_to_osm.pl  db.c  draw.c  gps.c  http_error_codes.c  http_error_codes.h  http_fetcher.c  http_fetcher.h  io.c  kismet.c  main.c  nav.c  net.c  object.c  olsrdump_convert.pl  olsrs3d.c  olsrs3d.h  osm.c  process.c  s3dosm.h  search.h  structs.h  tag.c  test.osm  test.osm.license  ui.c
apps/s3dvt/: CMakeLists.txt  Makefile.am  Makefile.in  TODO  main.c  s3dvt.h  terminal.c
client/: 3dsread.c  Makefile.am  Makefile.in  TODO  callback.c  config.h  error.c  event.c  fontselect.c  freetype.c  io.c  network.c  object_queue.c  proto_in.c  proto_out.c  s3d.h  s3d_keysym.h  s3dlib.h  sei_construct.c  sei_interface.h  sei_misc.c  sei_monotone.c  sei_tri.c  sei_triangulate.h  shm.c  shm_ringbuf.c  tcp.c  tesselate.c  vector.c
example/: 3dsloader.c  3dsloader_g3d.c  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  TODO  dot_mcp.c  example.h  filebrowser.c  hudtest.c  katze.c  linetest.c  modelloader.c  nichtsnutz.c  ptrtest.c  radius_test.c  s3d_startapp.c  s3dclock.c  snowman.c  strtest.c  texturetest.c  widgets.c  wiresphere.c
example/objs/: big_p.3ds  bigsphere.3ds  clock_bg.3ds  comp.3ds  cubey.3ds  dotdot.3ds  duno.3ds  geometry.3ds  katze_body.3ds  katze_leg.3ds  katze_tail.3ds  lil_p.3ds  materials.3ds  miu.3ds  new_sphere.3ds  ringsystem.3ds  sec_p.3ds  snow_foot.3ds  snow_head.3ds  sphere.3ds  spikeybla.3ds  weirdball.3ds  wtf.3ds  xyz.3ds
experimental/: CMakeLists.txt  ROADMAP
experimental/comptest/: CMakeLists.txt  comptest.c  comptest.h  window.c  x11.c
experimental/olsrs3d/: CMakeLists.txt  main.c  net.c  olsrs3d.h  process.c  search.c  search.h  structs.h
experimental/testvis/: CMakeLists.txt  testvis.c
experimental/wiitest/: CMakeLists.txt  wiitest.c
libg3d/: ChangeLog  Makefile  Makefile.am  Makefile.in  configure.in  libg3d.pc  libg3d.pc.in
libg3d/include/: Makefile  Makefile.am  Makefile.in
libg3d/m4/: Makefile  Makefile.am  Makefile.in  acinclude.m4
libg3d/plugins/: Makefile
libg3d/s3d/: HowTo-Install
libg3d/src/: Makefile  Makefile.am  Makefile.in  context.c  face.c  model.c  plugins.c  texture.c
libs3d/: 3dsread.c  CMakeLists.txt  Makefile.am  TODO  callback.c  config.h  endian.c  error.c  event.c  fontselect.c  freetype.c  hash.c  hash.h  io.c  libs3d.pc.cmake  libs3d.pc.in  libs3d.ver  modelread.c  network.c  object_queue.c  proto_in.c  proto_out.c  s3d.h  s3d_keysym.h  s3dlib.h  sei_construct.c  sei_interface.h  sei_misc.c  sei_monotone.c  sei_tri.c  sei_triangulate.h  shm.c  shm_ringbuf.c  tcp.c  texture.c  vector.c
libs3dw/: CMakeLists.txt  Makefile.am  TODO  animate.c  arrange.c  button.c  event.c  input.c  label.c  libs3dw.pc.cmake  libs3dw.pc.in  libs3dw.ver  object.c  root.c  s3dw.h  s3dw_int.h  scrollbar.c  style.c  surface.c  textbox.c  widget.c
objs/: AUTHORS  CMakeLists.txt  Makefile.am  abs.3ds  abs2.3ds  accesspoint.3ds  arrow.3ds  arrow2.3ds  big_p.3ds  btn_close.3ds  btn_maximize.3ds  btn_minimize.3ds  btn_rotate.3ds  clock_bg.3ds  comp.3ds  cube.3ds  cubeyholes.3ds  dot.3ds  film.3ds  folder.3ds  go_button.3ds  internet.3ds  katze_body.3ds  lil_p.3ds  meshnode.3ds  noinetwep.3ds  noinetwpa.3ds  notes.3ds  reset.3ds  rotate.3ds  s3d_berlios_de.3ds  s3d_logo.3ds  s3d_sf_net.3ds  s3dstart.3ds  sec_p.3ds  snow_body.3ds  star.3ds
server/: CMakeLists.txt  Makefile.Win32  Makefile.am  Makefile.in  THREADS  TODO  allocate.c  allocate.h  config.h  cull.c  endian.c  error.c  event.c  global.h  graphics.c  graphics_glut.c  graphics_sdl.c  main.c  matrix.c  mcp.c  navigation.c  network.c  object.c  process.c  proto.c  proto.h  shm.c  shm_ringbuf.c  tcp.c  user.c  user_glut.c  user_sdl.c
(+362 files in other folders)
