dnl Process this file with autoconf to produce a configure script.
AC_INIT(server/main.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_PATH_X
AC_PATH_XTRA
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)
PREFIX=/usr/local
WARNS=""
MAKEF="Makefile client/Makefile server/Makefile"
LIBS="$X_PRE_LIBS $X_LIBS $X_EXTRA_LIBS $LIBS"

dnl ##################################### SERVER #######################################
AC_CHECK_LIB(m, main,,exit)
AC_CHECK_LIB(GL, main,,exit)
AC_CHECK_LIB(X11, main,,exit)
AC_CHECK_LIB(glut, main, HAVE_glut="x")
AC_CHECK_LIB(SDL, main, HAVE_SDL="x")
if test x${HAVE_glut}${HAVE_SDL} == "x"; then
	AC_MSG_ERROR([No OpenGL Framework found. Try installing GLUT or SDL, or both])
fi
if test "${HAVE_SDL}" == "x"; then
	LIBS="$LIBS `sdl-config --libs`"
fi
if test "${HAVE_glut}" == "x"; then
	LIBS="$LIBS -lglut"
fi


SERVER_LIBS=$LIBS
LIBS=""
AC_SUBST(SERVER_LIBS)

dnl ##################################### CLIENT #######################################

AC_CHECK_LIB(fontconfig, main,,exit)
AC_CHECK_LIB(freetype, main, HAVE_FREETYPE="x",exit)
FTCFLAGS=""
if test "${HAVE_FREETYPE}" == "x"; then
	LIBS="$LIBS \`freetype-config --libs\`"
	FTCFLAGS='`freetype-config --cflags`'
fi
if test x${HAVE_glut} == "x"; then
    AC_MSG_ERROR([Sorry, we need glut for the client in for Glyph Tesselation ...])
else
    LIBS="$LIBS -lglut"
fi
CLIENT_LIBS=$LIBS
LIBS=""
AC_SUBST(CLIENT_LIBS)
AC_SUBST(FTCFLAGS)

dnl ##################################### EXAMPLES #####################################

AC_CHECK_LIB(s3d, main,HAVE_s3d="x")
if test "${HAVE_s3d}" == "x"; then
	LIBS=" -ls3d"
	EXAMPLE_LIBS=$LIBS
	LIBS=""
	AC_SUBST(EXAMPLE_LIBS)
	MAKEF="$MAKEF example/Makefile"
dnl ##################################### APPLICATIONS #################################
	MAKEF="$MAKEF apps/s3dvt/Makefile apps/olsrs3d/Makefile apps/Makefile"
	APP_TARGETS="s3dvt olsrs3d"
	AC_CHECK_LIB(gps, main, HAVE_GPS="x")
	if test "${HAVE_GPS}" == "x"; 
	then
		MAKEF="$MAKEF apps/s3dgps/Makefile"
		APP_TARGETS="$APP_TARGETS s3dgps"
	else 
		WARNS="$WARNS ### Sorry, you lack the gps library to compile s3dgps ... \n"
	fi 
	LIBS="$X_PRE_LIBS $X_LIBS $X_EXTRA_LIBS $LIBS"
	AC_CHECK_LIB(Xtst, main, HAVE_Xtst="x")
	if test "${HAVE_Xtst}" == "x"; 
	then
		MAKEF="$MAKEF apps/s3d_x11gate/Makefile"
		APP_TARGETS="$APP_TARGETS s3d_x11gate"
	else 
		WARNS="$WARNS ### Sorry, you lack the Xtest Extension to compile the s3d to X11 Gateway ... \n"
	fi
	AC_SUBST(APP_TARGETS)
else
	WARNS="$WARNS ### Sorry, you need to have the library installed to compile the examples and apps. try make && make install and configure again ... \n"
fi


AC_SUBST(PREFIX)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select socket strerror strtod strtol)

AC_CONFIG_HEADER(config.h)
AC_OUTPUT($MAKEF)
echo -e $WARNS
echo "now use 'make' to compile and 'make install' to install"
