#SUBDIRS		= s3dapi

EXTRA_DIST	=  README libs3d/libs3d.docbook s3d.docbook misc.docbook libs3dw/libs3dw.docbook \
			   bookinfo.docbook server/server.docbook introduction.docbook \
			   manpages/s3d.1 manpages/s3dmanpage.sgml manpages/manpage.links manpages/manpage.refs

man_MANS = manpages/s3d.1
